--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -8,7 +8,7 @@
   "menu.supportTitle": "Any questions?",
   "menu.supportLink": "Ask our support team",
   "menu.knowledgeBase": "Knowledge base",
-  "menu.governanceCenter": "Governance center",
+  "menu.governanceCentre": "Governance centre",
   "analytics.accept": "Accept",
   "analytics.anonymous": "Anonymous analytics data",
   "analytics.description": "Share user insights to help us fine tune Yoroi to better serve your needs.",
@@ -594,6 +594,44 @@
   "components.catalyst.step6.note": "Keep it — you won’t be able to access this code after tapping on Complete.",
   "components.catalyst.step6.secretCode": "Secret Code",
   "components.catalyst.title": "Register to vote",
+  "components.governance.governanceCentreTitle": "Governance centre",
+  "components.governance.confirmTxTitle": "Confirm transaction",
+  "components.governance.learnMoreAboutGovernance": "Learn more About Governance",
+  "components.governance.actionDelegateToADRepTitle": "Delegate to a DRep",
+  "components.governance.actionDelegateToADRepDescription": "You are designating someone else to cast vote on your behalf for all proposals now and in the future.",
+  "components.governance.actionAbstainTitle": "Abstain",
+  "components.governance.actionAbstainDescription": "You are choosing not to cast a vote on all proposals now and in the future.",
+  "components.governance.actionNoConfidenceTitle": "No confidence",
+  "components.governance.actionNoConfidenceDescription": "You are expressing a lack of trust for all proposals now and in the future.",
+  "components.governance.drepKey": "DRep Key",
+  "components.governance.delegatingToADRep": "Delegating to a DRep",
+  "components.governance.abstaining": "Abstaining",
+  "components.governance.delegateVotingToDRep": "Delegate voting to {drepID}",
+  "components.governance.selectAbstain": "Select abstain",
+  "components.governance.selectNoConfidence": "Select no confidence",
+  "components.governance.operations": "Operations",
+  "components.governance.enterADrepIDAndPassword": "Enter a Drep ID and password to sign this transaction",
+  "components.governance.drepID": "Drep ID",
+  "components.governance.thankYouForParticipating": "Thank you for participating in Governance",
+  "components.governance.thisTransactionCanTakeAWhile": "This transaction can take a while!",
+  "components.governance.participationBenefits": "Participating in the Cardano Governance gives you the opportunity to participate in the voting as well as withdraw your staking rewards",
+  "components.governance.goToGovernance": "Go to Governance",
+  "components.governance.findDRepHere": "Find a DRep here",
+  "components.governance.reviewActions": "Review the selections carefully to assign yourself a Governance Status",
+  "components.governance.actionYouHaveSelectedTxPending": "You have selected <b>{action}</b> as your governance status.",
+  "components.governance.actionYouHaveSelected": "You have selected <b>{action}</b> as your governance status. You can change it at any time by clicking in the card below.",
+  "components.governance.changeDRep": "Change DRep",
+  "components.governance.confirm": "Confirm",
+  "components.governance.transactionDetails": "Transaction details",
+  "components.governance.total": "Total",
+  "components.governance.transactionFailed": "Transaction failed",
+  "components.governance.transactionFailedDescription": "Your transaction has not been processed properly due to technical issues",
+  "components.governance.tryAgain": "Try again",
+  "components.governance.withdrawWarningTitle": "Withdraw warning",
+  "components.governance.withdrawWarningDescription": "To withdraw your rewards, you need to participate in the Cardano Governance. Your rewards will continue to accumulate, but you are only able to withdraw it once you join the Governance process.",
+  "components.governance.withdrawWarningButton": "Participate on governance",
+  "components.governance.enterDRepID": "Enter DRep ID",
+  "components.governance.enterPassword": "Enter password to sign this transaction",
   "crypto.errors.rewardAddressEmpty": "Reward address is empty.",
   "crypto.keystore.approveTransaction": "Authorize with your biometrics",
   "crypto.keystore.cancelButton": "Cancel",
