--- a/apps/wallet-mobile/src/i18n/locales/en-US.json
+++ b/apps/wallet-mobile/src/i18n/locales/en-US.json
@@ -314,6 +314,7 @@
   "components.send.confirmscreen.title": "Send",
   "components.send.listamountstosendscreen.title": "Assets added",
   "components.send.sendscreen.walletAddress": "Wallet Address",
+  "components.send.sendscreen.resolvedAddress": "Related Address",
   "components.send.sendscreen.addressInputErrorInvalidAddress": "Please enter a valid address",
   "components.send.sendscreen.addressInputErrorInvalidDomain": "Please enter a valid domain",
   "components.send.sendscreen.addressInputLabel": "Address",
