--- a/apps/wallet-mobile/translations/messages/src/features/Send/common/strings.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Send/common/strings.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Please enter valid amount",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 69,
+      "line": 70,
       "column": 18,
-      "index": 4343
+      "index": 4410
     },
     "end": {
-      "line": 72,
+      "line": 73,
       "column": 3,
-      "index": 4471
+      "index": 4538
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Please enter valid amount",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 73,
+      "line": 74,
       "column": 27,
-      "index": 4500
+      "index": 4567
     },
     "end": {
-      "line": 76,
+      "line": 77,
       "column": 3,
-      "index": 4637
+      "index": 4704
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Amount too large",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 77,
+      "line": 78,
       "column": 13,
-      "index": 4652
+      "index": 4719
     },
     "end": {
-      "line": 80,
+      "line": 81,
       "column": 3,
-      "index": 4766
+      "index": 4833
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Amount is too low",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 81,
+      "line": 82,
       "column": 11,
-      "index": 4779
+      "index": 4846
     },
     "end": {
-      "line": 84,
+      "line": 85,
       "column": 3,
-      "index": 4892
+      "index": 4959
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Cannot send less than {minUtxo} {ticker}",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 85,
+      "line": 86,
       "column": 15,
-      "index": 4909
+      "index": 4976
     },
     "end": {
-      "line": 88,
+      "line": 89,
       "column": 3,
-      "index": 5049
+      "index": 5116
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Amount must be positive",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 89,
+      "line": 90,
       "column": 12,
-      "index": 5063
+      "index": 5130
     },
     "end": {
-      "line": 92,
+      "line": 93,
       "column": 3,
-      "index": 5183
+      "index": 5250
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Not enough money to make this transaction",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 93,
+      "line": 94,
       "column": 23,
-      "index": 5208
+      "index": 5275
     },
     "end": {
-      "line": 96,
+      "line": 97,
       "column": 3,
-      "index": 5357
+      "index": 5424
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!!Maximum value of a token inside a UTXO exceeded (overflow).",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 97,
+      "line": 98,
       "column": 17,
-      "index": 5376
+      "index": 5443
     },
     "end": {
-      "line": 100,
+      "line": 101,
       "column": 3,
-      "index": 5538
+      "index": 5605
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Keep some balance for tokens",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 101,
+      "line": 102,
       "column": 30,
-      "index": 5570
+      "index": 5637
     },
     "end": {
-      "line": 104,
+      "line": 105,
       "column": 3,
-      "index": 5680
+      "index": 5747
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Wallet Address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 108,
+      "line": 109,
       "column": 17,
-      "index": 5744
+      "index": 5811
     },
     "end": {
-      "line": 111,
+      "line": 112,
       "column": 3,
-      "index": 5842
+      "index": 5909
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Receiver",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 112,
+      "line": 113,
       "column": 12,
-      "index": 5856
+      "index": 5923
     },
     "end": {
-      "line": 115,
+      "line": 116,
       "column": 3,
-      "index": 5943
+      "index": 6010
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Fee",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 116,
+      "line": 117,
       "column": 12,
-      "index": 5957
+      "index": 6024
     },
     "end": {
-      "line": 119,
+      "line": 120,
       "column": 3,
-      "index": 6039
+      "index": 6106
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 120,
+      "line": 121,
       "column": 19,
-      "index": 6060
+      "index": 6127
     },
     "end": {
-      "line": 123,
+      "line": 124,
       "column": 3,
-      "index": 6147
+      "index": 6214
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!Balance after",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 124,
+      "line": 125,
       "column": 21,
-      "index": 6170
+      "index": 6237
     },
     "end": {
-      "line": 127,
+      "line": 128,
       "column": 3,
-      "index": 6257
+      "index": 6324
     }
   },
   {
@@ -214,14 +214,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 128,
+      "line": 129,
       "column": 28,
-      "index": 6287
+      "index": 6354
     },
     "end": {
-      "line": 131,
+      "line": 132,
       "column": 3,
-      "index": 6383
+      "index": 6450
     }
   },
   {
@@ -229,14 +229,14 @@
     "defaultMessage": "!!!Checking balance...",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 132,
+      "line": 133,
       "column": 34,
-      "index": 6419
+      "index": 6486
     },
     "end": {
-      "line": 135,
+      "line": 136,
       "column": 3,
-      "index": 6539
+      "index": 6606
     }
   },
   {
@@ -244,14 +244,14 @@
     "defaultMessage": "!!!-",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 136,
+      "line": 137,
       "column": 36,
-      "index": 6577
+      "index": 6644
     },
     "end": {
-      "line": 139,
+      "line": 140,
       "column": 3,
-      "index": 6681
+      "index": 6748
     }
   },
   {
@@ -259,14 +259,14 @@
     "defaultMessage": "!!!Please enter valid address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 140,
+      "line": 141,
       "column": 35,
-      "index": 6718
+      "index": 6785
     },
     "end": {
-      "line": 143,
+      "line": 144,
       "column": 3,
-      "index": 6846
+      "index": 6913
     }
   },
   {
@@ -274,14 +274,14 @@
     "defaultMessage": "!!!Please enter valid domain",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 144,
+      "line": 145,
       "column": 34,
-      "index": 6882
+      "index": 6949
     },
     "end": {
-      "line": 147,
+      "line": 148,
       "column": 3,
-      "index": 7008
+      "index": 7075
     }
   },
   {
@@ -289,14 +289,14 @@
     "defaultMessage": "!!!Receiver address, ADA Handle or domains",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 148,
+      "line": 149,
       "column": 21,
-      "index": 7031
+      "index": 7098
     },
     "end": {
-      "line": 151,
+      "line": 152,
       "column": 3,
-      "index": 7152
+      "index": 7219
     }
   },
   {
@@ -304,14 +304,14 @@
     "defaultMessage": "!!!Send all assets (including all tokens)",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 152,
+      "line": 153,
       "column": 25,
-      "index": 7179
+      "index": 7246
     },
     "end": {
-      "line": 155,
+      "line": 156,
       "column": 3,
-      "index": 7309
+      "index": 7376
     }
   },
   {
@@ -319,14 +319,14 @@
     "defaultMessage": "!!!Send all {assetId}",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 156,
+      "line": 157,
       "column": 19,
-      "index": 7330
+      "index": 7397
     },
     "end": {
-      "line": 159,
+      "line": 160,
       "column": 3,
-      "index": 7434
+      "index": 7501
     }
   },
   {
@@ -335,14 +335,14 @@
     "defaultMessage": "!!!Domain is not registered",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 160,
+      "line": 161,
       "column": 28,
-      "index": 7464
+      "index": 7531
     },
     "end": {
-      "line": 164,
+      "line": 165,
       "column": 3,
-      "index": 7613
+      "index": 7680
     }
   },
   {
@@ -351,14 +351,14 @@
     "defaultMessage": "!!!No Cardano record found for this domain",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 165,
+      "line": 166,
       "column": 29,
-      "index": 7644
+      "index": 7711
     },
     "end": {
-      "line": 169,
+      "line": 170,
       "column": 3,
-      "index": 7809
+      "index": 7876
     }
   },
   {
@@ -367,14 +367,14 @@
     "defaultMessage": "!!!Domain is not supported",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 170,
+      "line": 171,
       "column": 26,
-      "index": 7837
+      "index": 7904
     },
     "end": {
-      "line": 174,
+      "line": 175,
       "column": 3,
-      "index": 7983
+      "index": 8050
     }
   },
   {
@@ -382,14 +382,14 @@
     "defaultMessage": "!!!Search tokens",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 175,
+      "line": 176,
       "column": 16,
-      "index": 8001
+      "index": 8068
     },
     "end": {
-      "line": 178,
+      "line": 179,
       "column": 3,
-      "index": 8097
+      "index": 8164
     }
   },
   {
@@ -397,14 +397,14 @@
     "defaultMessage": "!!!Select asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 179,
+      "line": 180,
       "column": 20,
-      "index": 8119
+      "index": 8186
     },
     "end": {
-      "line": 182,
+      "line": 183,
       "column": 3,
-      "index": 8208
+      "index": 8275
     }
   },
   {
@@ -412,14 +412,14 @@
     "defaultMessage": "!!!Unknown asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 183,
+      "line": 184,
       "column": 16,
-      "index": 8226
+      "index": 8293
     },
     "end": {
-      "line": 186,
+      "line": 187,
       "column": 3,
-      "index": 8331
+      "index": 8398
     }
   },
   {
@@ -427,14 +427,14 @@
     "defaultMessage": "!!!No assets found",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 187,
+      "line": 188,
       "column": 12,
-      "index": 8345
+      "index": 8412
     },
     "end": {
-      "line": 190,
+      "line": 191,
       "column": 3,
-      "index": 8448
+      "index": 8515
     }
   },
   {
@@ -442,14 +442,14 @@
     "defaultMessage": "!!!found",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 191,
+      "line": 192,
       "column": 9,
-      "index": 8459
+      "index": 8526
     },
     "end": {
-      "line": 194,
+      "line": 195,
       "column": 3,
-      "index": 8549
+      "index": 8616
     }
   },
   {
@@ -457,14 +457,14 @@
     "defaultMessage": "!!!You have",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 195,
+      "line": 196,
       "column": 11,
-      "index": 8562
+      "index": 8629
     },
     "end": {
-      "line": 198,
+      "line": 199,
       "column": 3,
-      "index": 8657
+      "index": 8724
     }
   },
   {
@@ -472,14 +472,14 @@
     "defaultMessage": "!!!No {fungible} added yet",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 199,
+      "line": 200,
       "column": 20,
-      "index": 8679
+      "index": 8746
     },
     "end": {
-      "line": 202,
+      "line": 203,
       "column": 3,
-      "index": 8798
+      "index": 8865
     }
   },
   {
@@ -487,14 +487,14 @@
     "defaultMessage": "!!!Do you really want to send all?",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 203,
+      "line": 204,
       "column": 23,
-      "index": 8823
+      "index": 8890
     },
     "end": {
-      "line": 206,
+      "line": 207,
       "column": 3,
-      "index": 8944
+      "index": 9011
     }
   },
   {
@@ -502,14 +502,14 @@
     "defaultMessage": "!!!You have selected the send all option. Please confirm that you understand how this feature works.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 207,
+      "line": 208,
       "column": 22,
-      "index": 8968
+      "index": 9035
     },
     "end": {
-      "line": 211,
+      "line": 212,
       "column": 3,
-      "index": 9160
+      "index": 9227
     }
   },
   {
@@ -517,14 +517,14 @@
     "defaultMessage": "!!!All you {assetNameOrId} balance will be transferred in this transaction.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 212,
+      "line": 213,
       "column": 24,
-      "index": 9186
+      "index": 9253
     },
     "end": {
-      "line": 215,
+      "line": 216,
       "column": 3,
-      "index": 9349
+      "index": 9416
     }
   },
   {
@@ -532,14 +532,14 @@
     "defaultMessage": "!!!All your tokens, including NFTs and any other native assets in your wallet, will also be transferred in this transaction.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 216,
+      "line": 217,
       "column": 24,
-      "index": 9375
+      "index": 9442
     },
     "end": {
-      "line": 221,
+      "line": 222,
       "column": 3,
-      "index": 9604
+      "index": 9671
     }
   },
   {
@@ -547,14 +547,14 @@
     "defaultMessage": "!!!After you confirm the transaction in the next screen, your wallet will be emptied.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 222,
+      "line": 223,
       "column": 24,
-      "index": 9630
+      "index": 9697
     },
     "end": {
-      "line": 225,
+      "line": 226,
       "column": 3,
-      "index": 9803
+      "index": 9870
     }
   },
   {
@@ -562,14 +562,14 @@
     "defaultMessage": "!!!Continue",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 226,
+      "line": 227,
       "column": 18,
-      "index": 9823
+      "index": 9890
     },
     "end": {
-      "line": 229,
+      "line": 230,
       "column": 3,
-      "index": 9916
+      "index": 9983
     }
   },
   {
@@ -577,14 +577,14 @@
     "defaultMessage": "!!!We are experiencing issues with fetching your current balance. Click to retry.",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 230,
+      "line": 231,
       "column": 27,
-      "index": 9945
+      "index": 10012
     },
     "end": {
-      "line": 233,
+      "line": 234,
       "column": 3,
-      "index": 10117
+      "index": 10184
     }
   },
   {
@@ -592,14 +592,14 @@
     "defaultMessage": "!!!You cannot send a new transaction while an existing one is still pending",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 234,
+      "line": 235,
       "column": 41,
-      "index": 10160
+      "index": 10227
     },
     "end": {
-      "line": 237,
+      "line": 238,
       "column": 3,
-      "index": 10340
+      "index": 10407
     }
   },
   {
@@ -607,14 +607,14 @@
     "defaultMessage": "!!!Transaction submitted",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 238,
+      "line": 239,
       "column": 20,
-      "index": 10362
+      "index": 10429
     },
     "end": {
-      "line": 241,
+      "line": 242,
       "column": 3,
-      "index": 10470
+      "index": 10537
     }
   },
   {
@@ -622,14 +622,14 @@
     "defaultMessage": "!!!Check this transaction in the list of wallet transactions",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 242,
+      "line": 243,
       "column": 19,
-      "index": 10491
+      "index": 10558
     },
     "end": {
-      "line": 245,
+      "line": 246,
       "column": 3,
-      "index": 10634
+      "index": 10701
     }
   },
   {
@@ -637,14 +637,14 @@
     "defaultMessage": "!!!Go to transactions",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 246,
+      "line": 247,
       "column": 21,
-      "index": 10657
+      "index": 10724
     },
     "end": {
-      "line": 249,
+      "line": 250,
       "column": 3,
-      "index": 10763
+      "index": 10830
     }
   },
   {
@@ -652,14 +652,14 @@
     "defaultMessage": "!!!Transaction failed",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 250,
+      "line": 251,
       "column": 17,
-      "index": 10782
+      "index": 10849
     },
     "end": {
-      "line": 253,
+      "line": 254,
       "column": 3,
-      "index": 10884
+      "index": 10951
     }
   },
   {
@@ -667,14 +667,14 @@
     "defaultMessage": "!!!Your transaction has not been processed properly due to technical issues",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 254,
+      "line": 255,
       "column": 16,
-      "index": 10902
+      "index": 10969
     },
     "end": {
-      "line": 257,
+      "line": 258,
       "column": 3,
-      "index": 11057
+      "index": 11124
     }
   },
   {
@@ -682,14 +682,14 @@
     "defaultMessage": "!!!Try again",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 258,
+      "line": 259,
       "column": 18,
-      "index": 11077
+      "index": 11144
     },
     "end": {
-      "line": 261,
+      "line": 262,
       "column": 3,
-      "index": 11171
+      "index": 11238
     }
   },
   {
@@ -697,14 +697,14 @@
     "defaultMessage": "!!!Asset",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 262,
+      "line": 263,
       "column": 9,
-      "index": 11182
+      "index": 11249
     },
     "end": {
-      "line": 265,
+      "line": 266,
       "column": 3,
-      "index": 11255
+      "index": 11322
     }
   },
   {
@@ -712,14 +712,29 @@
     "defaultMessage": "!!!Scan recipients QR code to add a wallet address",
     "file": "src/features/Send/common/strings.ts",
     "start": {
-      "line": 266,
+      "line": 267,
       "column": 23,
-      "index": 11280
+      "index": 11347
     },
     "end": {
-      "line": 269,
+      "line": 270,
       "column": 3,
-      "index": 11407
+      "index": 11474
+    }
+  },
+  {
+    "id": "components.send.sendscreen.resolvedAddress",
+    "defaultMessage": "!!!Related Address",
+    "file": "src/features/Send/common/strings.ts",
+    "start": {
+      "line": 271,
+      "column": 19,
+      "index": 11495
+    },
+    "end": {
+      "line": 274,
+      "column": 3,
+      "index": 11596
     }
   }
 ]
